# codex-2

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  README.md  SECURITY.md  docker-compose.yml
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  container-publish.yml  dependency-review.yml
backend/: .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/app/: __init__.py  database.py  health.py  main.py  models.py  schemas.py  settings.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 202605180001_create_project_events.py
backend/scripts/: export_openapi.py
backend/tests/: test_health.py  test_models.py
backend/tests/integration/: test_runtime_readiness.py
docs/: CODEX_ENVIRONMENT_RESTORE.md  CODEX_WORKFLOW.md  DELIVERY_CHECKLIST.md  ENGINEERING_STANDARDS.md  PROJECT_STACK.md  SECURITY_BASELINE.md  TEMPLATE_USAGE.md
docs/adr/: 0000-template.md  README.md
docs/requirements/: README.md  prd-template.md  (+4 more)
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: bootstrap.ps1  codex-check.ps1  dev.ps1  generate-api.ps1  install-git-hooks.ps1  logs.ps1  migrate.ps1  new-project.ps1  pre-commit.ps1  restore-codex-skills.ps1  secret-scan.ps1  stop.ps1  test-e2e.ps1  test-integration.ps1  test-template.ps1  verify.ps1
(+7 files in other folders)
