[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codex2-api"
version = "0.1.0"
description = "FastAPI backend for the codex-2 starter project."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "redis>=5.2,<7.0",
  "sqlmodel>=0.0.24,<1.0",
  "uvicorn[standard]>=0.34,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.9,<1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
